--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/bull": "^3.15.9",
         "@types/compression": "^1.7.5",
         "@types/cookie-session": "^2.0.49",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/express-useragent": "^1.0.5",
         "@types/hpp": "^0.2.6",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^22.2.0",
         "jest": "^29.7.0",
         "nodemon": "^3.1.4",
@@ -23,15 +27,24 @@
         "typescript-transform-paths": "^3.4.10"
     },
     "dependencies": {
+        "@bull-board/express": "^5.21.3",
+        "@socket.io/redis-adapter": "^8.3.0",
+        "bcryptjs": "^2.4.3",
+        "bull": "^4.16.0",
+        "cloudinary": "^2.4.0",
         "compression": "^1.7.4",
         "cookie-session": "^2.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-useragent": "^1.0.15",
         "helmet": "^7.1.0",
         "hpp": "^0.2.3",
         "http-status-codes": "^2.3.0",
         "ioredis": "^5.4.1",
+        "joi": "^17.13.3",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.5.2",
         "socket.io": "^4.7.5",
         "winston": "^3.14.1",
         "winston-daily-rotate-file": "^5.0.0"
