--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,11 @@
             { "transform": "typescript-transform-paths", "afterDeclarations": true }
         ],
         "paths": {
-            "@root/*": ["src/*"]
+            "@root/*": ["src/*"],
+            "@users/*": ["src/features/users/*"],
+            "@auth/*": ["src/features/auth/*"],
+            "@service/*": ["src/services/*"],
+            "@helpers/*": ["src/helpers/*"]
         }
     }
 }
